--- a/src/assets/style/config/_variable.scss
+++ b/src/assets/style/config/_variable.scss
@@ -5,15 +5,16 @@
 
   --clr-active: rgb(2, 130, 249);
   --clr-text-1: #fff;
-  --clr-bg-footer: rgb(48, 48, 48);
-  --clr-bg-main: rgb(28, 28, 28);
+  --clr-bg-0: rgb(46, 50, 60);
+  --clr-bg-1: rgb(30, 45, 59);
+  --clr-bg-2: rgb(28, 28, 28);
   /*╔════════════════════════════╗
           COMPONENT DIMENSION
     ╚════════════════════════════╝*/
   /* width */
   --wdt-container-xl: 80rem;
   /* heigth */
-  --hgt-item: 4rem;
+  --hgt-header: 5rem;
   --hgt-item-lg: 4.5rem;
   --hgt-item-sm: 2.5rem;
 
