--- a/src/assets/style/config/_reset.scss
+++ b/src/assets/style/config/_reset.scss
@@ -1,6 +1,9 @@
 /*╔═══════════════╗
         RESET
   ╚═══════════════╝*/
+* {
+  box-sizing: border-box;
+}
 
 html,
 body,
@@ -83,7 +86,6 @@ time,
 mark,
 audio,
 video {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
   border: 0;
